# analise_sentemento_cv

./: .gitignore  clasificacion_candidatos_por_cv.py  clasificacion_candidatos_por_cv2.py  comandos.md  extractor_requisitos_legais.py  proxectos.md  pyproject.toml  resultados_candidatos_por_cv.md  resultados_extractor_requisitos_legais.md  resultados_triaxe_telemedicina.md  triaxe_telemedicina.py
.ipynb_checkpoints/: zzz-nb001-sentiment-analysis-checkpoint.ipynb
