[project]
name = "10_sentiment_analysis"
version = "0.1.0"
description = "Reconocimiento de análise de sentemento"
requires-python = "==3.11.5"

[tool.poetry]
name = "10-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["julio colomer <info@aiaccelera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
jupyterlab = "^4.2.4"
langchain = "^0.2.11"
langchain-openai = "^0.1.20"
python-dotenv = "^1.0.1"
langchain-ollama = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
